# TauriDotNetBridge

./: README.md  TauriDotNetBridge.sln
src/TauriDotNetBridge/: ActionInvoker.cs  AssemblyDependency.cs  Bridge.cs  Composer.cs  Logging.cs  PluginLoader.cs  RouteRequest.cs  RouteResponse.cs  Router.cs  TauriDotNetBridge.csproj  TauriDotNetBridge.targets
src/TauriDotNetBridge.Contracts/: TauriDotNetBridge.Contracts.csproj
src/TauriDotNetBridge/Contracts/: IEventPublisher.cs  IHostedService.cs  RouteRequest.cs  RouteResponse.cs
src/tauri-dotnet-bridge-host/: Cargo.toml
src/tauri-dotnet-bridge-host/src/: lib.rs
src/tauri-dotnet-sample/: index.html  package.json  pnpm-lock.yaml
src/tauri-dotnet-sample/src/: App.vue
src/tauri-dotnet-sample/src-dotnet/Sample.TauriPlugIn/: HomeController.cs  NewsFeed.cs  PlugIn.cs  Sample.TauriPlugIn.csproj
src/tauri-dotnet-sample/src-tauri/: Cargo.toml  tauri.conf.json
src/tauri-dotnet-sample/src-tauri/src/: lib.rs  main.rs
